--- a/manifest.json
+++ b/manifest.json
@@ -1,16 +1,16 @@
 
 
 {
-    "name": "StreakWise",
-    "short_name": "StreakWise",
-    "description": "StreakWise Tracker is a comprehensive productivity app that helps students track study sessions with a Pomodoro timer, monitor progress with analytics, and stay motivated with achievements and goals.",
+    "name": "StreakWise Analytics",
+    "short_name": "StreakWise Analytics",
+    "description": "StreakWise Analytics is a comprehensive productivity app that helps students track study sessions with a Pomodoro timer, monitor progress with analytics, and stay motivated with achievements and goals.",
     "start_url": "/index.html",
     "display": "standalone",
     "background_color": "#e3dfff",
     "theme_color": "#4285f4",
     "icons": [
         {
-            "src": "https://i.ibb.co/xqTCDn2K/Untitled-design-6.jpg",
+            "src": "https://i.ibb.co/W4H0jXP5/images.png",
             "sizes": "192x192",
             "type": "image/png"
         },
