--- a/manifest.json
+++ b/manifest.json
@@ -15,7 +15,7 @@
             "type": "image/png"
         },
         {
-            "src": "https://i.ibb.co/xqTCDn2K/Untitled-design-6.jpg",
+            "src": "https://i.ibb.co/W4H0jXP5/images.png",
             "sizes": "512x512",
             "type": "image/png"
         }
