--- a/manifest.json
+++ b/manifest.json
@@ -6,16 +6,16 @@
     "description": "StreakWise Analytics is a comprehensive productivity app that helps students track study sessions with a Pomodoro timer, monitor progress with analytics, and stay motivated with achievements and goals.",
     "start_url": "/index.html",
     "display": "standalone",
-    "background_color": "#e3dfff",
+    "background_color": "#F7F7F7",
     "theme_color": "#4285f4",
     "icons": [
         {
-            "src": "https://i.ibb.co/W4H0jXP5/images.png",
+            "src": "https://i.ibb.co/Z6fjBPwF/Untitled-design.png",
             "sizes": "192x192",
             "type": "image/png"
         },
         {
-            "src": "https://i.ibb.co/W4H0jXP5/images.png",
+            "src": "https://i.ibb.co/Z6fjBPwF/Untitled-design.png",
             "sizes": "512x512",
             "type": "image/png"
         }
