--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
 {
     "name": "StreakWise Analytics",
     "short_name": "StreakWise Analytics",
-    "description": "StreakWise Analytics is a comprehensive productivity app that helps students track study sessions with a Pomodoro timer, monitor progress with analytics, and stay motivated with achievements and goals.",
+    "description": "StreakWise Analytics is a comprehensive productivity app that helps students study sessions with a Pomodoro timer, monitor progress with analytics, and stay motivated with achievements and goals.",
     "start_url": "/index.html",
     "display": "standalone",
     "background_color": "#F7F7F7",
